test/scc_test/stmt/semantic-errors/023.a
023.t:3:10: error: declaration of 'extern' variable 'a' in 'for' loop initial declaration